<resources>
    <string name="app_name">USJobsFinder</string>
    <string name="drawer_tv_filters"><u>Filters &amp; Sorting:</u></string>
    <string name="drawer_tv_tags">Tags</string>
    <string name="drawer_btn_tags1">federal</string>
    <string name="drawer_btn_tags2">state</string>
    <string name="drawer_btn_tags3">county</string>
    <string name="drawer_btn_tags4">city</string>
    <string name="drawer_tv_postdateheader">Posting Date:</string>
    <string name="drawer_tv_postdate_before">Within </string>
    <string name="drawer_tv_postdate_after"> Days</string>
    <string name="drawer_tv_location">Location:</string>
    <string name="drawer_btn_usecurrloc">use current location</string>
    <string name="drawer_btn_usespecloc">choose a location</string>
    <string name="drawer_tv_sorting">Sort by:</string>
    <string name="drawer_radbtn_sortsalaryasc">Salary: Ascending Order</string>
    <string name="drawer_radbtn_sortsalarydesc">Salary: Descending Order</string>
    <string name="drawer_radbtn_sortstartdatenew">Start Date: Newest</string>
    <string name="drawer_radbtn_sortstartdateold">Start Date: Oldest</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="menu_favorite_title">Favorites</string>
    <string name="menu_settings_title">Settings</string>
    <string name="filterTagsKey">filter_tags_modified</string>
    <string name="filterTagsFederalKey">filter_tag_federal</string>
    <string name="filterTagsStateKey">filter_tag_state</string>
    <string name="filterTagsCountyKey">filter_tag_county</string>
    <string name="filterTagsCityKey">filter_tag_city</string>
    <string name="filterPostDateKey">filter_post_date</string>
    <string name="filterLocationKey">filter_location_modified</string>
    <string name="filterCurrLocationKey">filter_current_location</string>
    <string name="filterSpecLocationKey">filter_specific_location</string>
    <string name="sortingPrefsChangedKey">sorting_prefs_changed</string>
    <string name="sortChoiceKey">sorting_choice</string>
    <string name="filterPrefsChangedKey">filter_prefs_changed</string>
    <string name="tag_value_federal">federal</string>
    <string name="tag_value_state">state</string>
    <string name="tag_value_county">county</string>
    <string name="tag_value_city">city</string>
    <string name="date_picker_header">Choose start date of results...</string>
    <string name="filterPostDateValueKey">filter_post_date_value</string>
    <string name="location_error">Location Unavailable:\u0020</string>
    <string name="location_permissions_denied">permission denied</string>
    <string name="location_connection_error">connection failed</string>
    <string name="map_location_saved">Location Saved</string>
    <string name="custwebview_title">Job Details</string>
    <string name="extra_webview_url_key">job url</string>
    <string name="menu_web_close">Close</string>
    <string name="extra_webview_jobdata_key">job data</string>
    <string name="favs_jobsaved">Job Saved</string>
    <string name="favs_jobremoved">Removed from Favorites</string>
    <string name="prefs_tutorial_key">tutorialpref</string>
    <string name="prefs_tsilsize_key">tsilsize</string>
    <string name="prefs_clearfavs_key">clearfavs</string>
    <string name="job_toomanylocations">Several Locations</string>
    <string name="prefs_listsizetitle">List Size</string>
    <string name="prefs_listsizesummary">Determine the quantity of search results returned</string>
    <string name="prefs_clearfavstitle">Clear Favorites</string>
    <string name="prefs_openlinkstitle">Open job links with browser</string>
    <string name="prefs_openlinks_key">open links</string>
    <string name="prefs_clearfavs_dialogtitle">Are you sure you want to delete your favorites?</string>
    <string name="prefs_clearfavs_dialogposmsg">Yes</string>
    <string name="prefs_clearfavs_dialognegmsg">No</string>
    <string name="prefs_clearfavs_toastconfirmation">Favorites have been cleared</string>
    <string name="jobstsil_opened">Opened\u0020</string>
    <string name="jobstsil_closing">Closing\u0020</string>
    <string name="search_error_msg">Error connecting to jobs server.  Please try again later.</string>
    <string name="location_not_chosen">No Location Chosen</string>
    <string name="map_saved_specloc">Saved Location</string>
    <string name="web_connect_error">Connection error:\u0020</string>
    <string name="nllstr">null</string>
    <string name="replacement_job_title">Job Title Unavailable</string>
    <string name="replacement_job_general">Data unavailable</string>
    <string name="replacement_job_date">Date Unavailable</string>
    <string name="url_unavailable_id">url_not_avail</string>
    <string name="url_data_missing">Sorry, url data unavailable for that job.</string>
    <string name="currlocation_waiting">Still looking for your current location…</string>
</resources>
